--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,7 +15,6 @@
 
     <string name="multiPlayer">
         Coming Soon!
-
     </string>
 
     <string name="about_title_text">Ghost Busters</string>
@@ -26,4 +25,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_maps2">Map</string>
+    <string name="_0">0</string>
 </resources>
